# trade

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  QUICKSTART.md  README.md  README_ZH.md  check_logs.sh  run.sh  tasks.md  test_config.sh  交易分析师提示词.md  交易员提示词.md  测试网修复说明.md
.spec-workflow/: session.json
.spec-workflow/specs/: design.md  requirements.md  tasks.md
src/: executor.rs  llm.rs  logging.rs  main.rs  market.rs  multi_agent.rs  performance.rs  state.rs  types.rs
