[package]
name = "trade"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
async-openai = "0.28"
dotenvy = "0.15"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
